--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div style="text-align: center;">
-  <h1>Welcome to {{title}}</h1>
+  <h1>Welcome To {{title}}</h1>
   <app-age-calculator></app-age-calculator>
 </div>
 <router-outlet></router-outlet>
